<resources>
    <string name="bad_location">Sorry, the location can not be accessed!</string>
    <string name="connect_server_fail_title">Connection Failed</string>
    <string name="connect_server_fail">Sorry, get file list error!</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_send">Share</string>
    <string name="menu_set">Set As Home</string>
    <string name="menu_add">Add To Server List</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_create">New</string>
    <string name="menu_create_file">File</string>
    <string name="menu_create_folder">Folder</string>
    <string name="menu_create_network_position">Server</string>
    <string name="menu_create_network_position2">New server</string>
    <string name="menu_viewinfo">Properties</string>
    <string name="network_location">Server:</string>
    <string name="network_location_example">Example:</string>
    <string name="network_location_user">Username:</string>
    <string name="network_location_password">Password:</string>
    <string name="network_location_anonymous">Anonymous</string>
    <string name="network_location_save">Remember password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text_password">Password:</string>
    <string name="preference_general_settings">Path settings</string>
    <string name="preference_root_dir">Home Directory</string>
    <string name="preference_app_backup_dir">App Backup Directory</string>
    <string name="preference_view">View settings</string>
    <string name="preference_list_title">View</string>
    <string name="search_condition_path">Path</string>
    <string name="preference_clipboard_hide_text">Hide Clipboard</string>
    <string name="preference_clipboard_hide_summary">Set of copied file, at bottom of screen</string>
    <string name="preference_layout">Layouts</string>
    <string name="preference_toolbar_hide_text">Hide Toolbar</string>
    <string name="preference_toolbar_hide_summary">Set of functional icons (multi-select...)</string>
    <string name="preference_sort_title">Sort By</string>
    <string name="preference_size_title">Size</string>
    <string name="preference_full_screen_text">Hide System Status Bar</string>
    <string name="preference_full_screen_summary">Set of status icons, at top of screen</string>
    <string name="preference_su_summary">Only for rooted devices</string>
    <string name="preference_hide_screen_text">Layout Settings</string>
    <string name="preference_hide_screen_summary">Hide/show some UI components</string>
    <string name="preference_enable_animation_text">Enable Animation</string>
    <string name="preference_enable_animation_summary">Enable animated layout effects</string>
    <string name="preference_hide_toolbar_text">Hide Toolbar Delay</string>
    <string name="preference_root_settings">Root Explorer</string>
    <string name="preference_sdcard_size_text">Show SDcard size</string>
    <string name="preference_sdcard_size_summary">Show size info on address bar</string>
    <string name="preference_hidden_file_title">Show Hidden Files</string>
    <string name="preference_hidden_file_summary">"Show files whose name start with a '.'"</string>
    <string name="network_location_hint_text">IP Addr,or IP Addr/SharedFolder</string>
    <string name="network_location_display">Display as:</string>
    <string name="network_location_display_hint_text">Click to edit, can be empty</string>
    <string name="preference_show_toolbar_tip">Click address bar to popup toolbar</string>
    <string name="preference_tabs">Tabs</string>
    <string name="preference_others">Others</string>
    <string name="preference_tabs_hide_local_text">"Remove 'Local'"</string>
    <string name="preference_tabs_hide_smb_text">"Remove 'LAN'"</string>
    <string name="preference_tabs_hide_ftp_text">"Remove 'FTP'"</string>
    <string name="preference_view_text">Icons, List, Details</string>
    <string name="preference_size_text">Normal, Small</string>
    <string name="preference_sortby_text">Name, Type, Size, Modified, Frequency, Random</string>
    <string name="preference_thumbnail_title">Show Image Thumbnail</string>
    <string name="preference_thumbnail_summary">Use thumbnail as image icons</string>
    <string name="preference_cache_title">Clear Cache</string>
    <string name="preference_cache_summary">Click to clear cached data (thumbnails etc.)</string>
    <string name="preference_mount_text">Mount File System</string>
    <string name="preference_mount_summary">Mount / , /system as writable</string>
    <string name="preference_theme_text">Theme Style</string>
    <string name="preference_theme_summary">Choose the Background you like</string>
    <string name="preference_display">Display Settings</string>
    <string name="preference_file_text">File Settings</string>
    <string name="preference_file_summary">Hide files, Thumbview, Exit Options</string>
    <string name="preference_show_scroll_thumb">Show Scroll Thumb</string>
    <string name="preference_show_scroll_thumb_summary">Show scroll thumb while long scrolling</string>
    <string name="preference_color_title">Color [Default theme]</string>
    <string name="preference_color_text">Choose the background color you like</string>
    <string name="menu_show_all_app">Show All</string>
    <string name="preference_tabs_hide_bt_text">"Remove 'Bluetooth'"</string>
    <string name="preference_bt_dir">Bluetooth Share Path</string>
    <string name="preference_bt_turnoff">Exit Options</string>
    <string name="preference_bt_turnoff_text">Close Bluetooth on Exit</string>
    <string name="preference_bt_turnoff_summary">Turn bluetooth off if started by ES</string>
    <string name="preference_theme_setting_text">Theme Settings</string>
    <string name="preference_theme_setting_summary">Choose theme or color</string>
    <string name="preference_root_settings_text">Root settings</string>
    <string name="hide_clipboard_on_paste_title">Hide Clipboard on Paste</string>
    <string name="hide_clipboard_on_paste_hint">Hide Clipboard after pasting files</string>
    <string name="msg_no_filename_input">Please input the file name</string>
    <string name="clear_cache_on_exit">Clear Cache on Exit</string>
    <string name="preference_folder_style">Folder Style</string>
    <string name="search_advanced_options">Advanced options</string>
    <string name="search_size_scope_selection_title">size</string>
    <string name="search_date_scope_selection_title">date</string>
    <string name="search_include_sub_directories">Include sub directories</string>
    <string name="lbl_file_name">File name</string>
    <string name="lbl_file_category">Category</string>
    <string name="lbl_show_password">Show password</string>
    <string name="password_rule_hint">Letters and numbers</string>
    <string name="preference_tabs_hide_net_text">"Remove 'Net'"</string>
    <string name="network_domain">Domain:</string>
    <string name="network_domain_hint_text">Domain name, can be empty</string>
    <string name="preference_dateformat_title">Date Format</string>
    <string name="preference_history_number">Max History Number</string>
    <string name="preference_history_number_ind">Max History Number(0-30)</string>
    <string name="preference_clean_history_exit">Clean History on Exit</string>
    <string name="preference_folder_summary">Choose the Folder you like</string>
    <string name="preference_show_settings">Show Options</string>
    <string name="preference_enable_toolbar_text_summary">hide the text on toolbar</string>
    <string name="preference_enable_toolbar_text_text">Hide Toolbar Text</string>
    <string name="preference_upgrade_settings_text">Update Settings</string>
    <string name="preference_upgrade_auto_check_summary">check new version every half month</string>
    <string name="preference_upgrade_auto_check_title">Auto Check</string>
    <string name="preference_upgrade_manual_check_summary">check new version manually</string>
    <string name="preference_upgrade_manual_check_title">Check Now</string>
    <string name="preference_clean_prefer_summary">Clear the default app settings</string>
    <string name="preference_clean_prefer_title">Clear defaults</string>
    <string name="preference_set_custom_bk_title">Customize Background</string>
    <string name="preference_set_custom_bk_summary">Select your background picture</string>
    <string name="preference_show_scroll_not_use_cache_summary">High efficiency, Speed Scrolling</string>
    <string name="preference_show_scroll_not_use_cache_title">Speed Scrolling</string>
    <string name="preference_language_setting_title">Language setting</string>
    <string name="preference_language_setting_summary">Select your language</string>
    <string name="preference_backup_sysapp_summary">Backup system app before uninstall</string>
    <string name="preference_backup_sysapp_text">Backup System App</string>
    <string name="preference_net_passwd_title">Network Protection</string>
    <string name="preference_net_passwd_summary">Turn on password to protect your network resources</string>
    <string name="preference_net_passwd_change_title">Change Password</string>
    <string name="preference_net_passwd_change_summary">Change the password</string>
    <string name="preference_home_up_title">Up to Root</string>
    <string name="preference_home_up_summary">Enable up to Root directory</string>
    <string name="stop_mount_broadcast">No Broadcast</string>
    <string name="auto_backup_installed_app">App Auto Backup</string>
    <string name="stop_mount_broadcast_summary">Not notify the system when file changed</string>
    <string name="auto_backup_installed_app_summary">Auto backup the uninstalled apps</string>
    <string name="preference_remote_settings_text">Remote Settings</string>
    <string name="preference_ftpsvr_text">Remote Manage</string>
    <string name="preference_ftpsvr_summary">Manage your phone from PC</string>
    <string name="preference_ftpsvr_auto_exit_summary">close on exit</string>
    <string name="preference_ftpsvr_auto_exit_text">Close on exit</string>
    <string name="preference_ftpsvr_root_dir">Set root directory</string>
    <string name="preference_ftpsvr_account_change_summary">Set manage account</string>
    <string name="preference_ftpsvr_account_change_title">Set manage account</string>
    <string name="preference_ftpsvr_port_title">Set port(1025~65534)</string>
    <string name="preference_network_setting">Others Setting</string>
    <string name="preference_security_setting_text">Security Setting</string>
    <string name="preference_security_setting_summary">Setting Password for Resource Access</string>
    <string name="preference_remote_settings_summary">Access Phone with FTP Server</string>
    <string name="preference_upgrade_settings_summary">Upgrade to latest Version</string>
    <string name="preference_ftpsvr_charset_change_summary">"current charset: "</string>
    <string name="preference_ftpsvr_charset_change_title">Set Charset</string>
    <string name="preference_ftpsvr_create_shortcut_summary">create a shortcut to lauch ftp server</string>
    <string name="preference_ftpsvr_create_shortcut_title">Create Shortcut</string>
    <string name="preference_hide_dirfiles_summary">manage your hidden files</string>
    <string name="preference_hide_dirfiles_title">Hide List</string>
    <string name="preference_start_protect_summary">Need password to access ES File Explorer</string>
    <string name="preference_start_protect_title">Start protect</string>
    <string name="preference_dateformat_text">MM/dd/yyyy,dd/MM/yyyy,yyyy-MM-dd</string>
    <string name="network_location_example_text">192.168.1.100/My Documents</string>
</resources>