<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableLayout android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
            <TableRow android:paddingTop="4.0dip">
                <TextView android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/ns_network_domain" android:text="@string/network_domain" />
                <EditText android:id="@id/network_domain" android:hint="@string/network_domain_hint_text" style="@style/editInputText" />
            </TableRow>
            <TableRow>
                <TextView android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/ns_network_location" android:text="@string/network_location" />
                <EditText android:id="@id/location" android:hint="@string/network_location_hint_text" style="@style/editInputText" />
            </TableRow>
            <TableRow>
                <TextView android:gravity="right" android:id="@id/ns_network_location_example" android:text="@string/network_location_example" />
                <TextView android:textStyle="normal" android:id="@id/example" android:text="@string/network_location_example_text" />
            </TableRow>
            <TableRow>
                <TextView android:gravity="right" android:id="@id/ns_network_location_user" android:text="@string/network_location_user" />
                <EditText android:id="@id/username" style="@style/editInputText" />
            </TableRow>
            <TableRow>
                <TextView android:gravity="right" android:id="@id/ns_network_location_password" android:text="@string/network_location_password" />
                <EditText android:id="@id/password" android:password="true" style="@style/editInputText" />
            </TableRow>
            <TableRow>
                <TextView />
                <CheckBox android:id="@id/use_anonymous" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_location_anonymous" />
            </TableRow>
            <TableRow android:paddingTop="2.0dip">
                <TextView android:gravity="right" android:id="@id/ns_network_location_display" android:text="@string/network_location_display" />
                <EditText android:id="@id/display" android:hint="@string/network_location_display_hint_text" style="@style/editInputText" />
            </TableRow>
        </TableLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="#55e0e0e0" android:paddingTop="8.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/login" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/ok" />
            <Button android:id="@id/cancel" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android_layoutMarginLeft="30dip" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
