<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchColumns="1" android:shrinkColumns="1">
        <TableRow>
            <TextView android:textStyle="bold" android:gravity="right" android:id="@id/search_cond_lbl_file_name_id" android:padding="3.0dip" android:text="@string/lbl_file_name" />
            <EditText android:id="@id/search_keyword" android:hint="@string/msg_no_filename_input" style="@style/editInputText" />
        </TableRow>
        <TableRow>
            <TextView android:textStyle="bold" android:gravity="right" android:id="@id/search_cond_path_id" android:padding="3.0dip" android:text="@string/search_condition_path" />
            <Spinner android:id="@id/search_path" android:prompt="@string/menu_show_all_app" />
        </TableRow>
        <TableRow>
            <TextView android:textStyle="bold" android:gravity="right" android:id="@id/search_cond_lbl_file_category_id" android:padding="3.0dip" android:text="@string/lbl_file_category" />
            <Spinner android:id="@id/search_category" android:prompt="@string/menu_show_all_app" />
        </TableRow>
        <View android:layout_height="10.0dip" />
        <RelativeLayout android:id="@id/search_advance" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:id="@id/textView1" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_advanced_options" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/advance_img_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:src="@android:drawable/arrow_down_float" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:layout_height="3.0dip" />
        <View android:background="@android:color/darker_gray" android:layout_height="1.0px" />
        <TableRow android:id="@id/search_field_recursion" android:visibility="gone">
            <CheckBox android:textStyle="bold" android:id="@id/search_recursion" android:checked="true" android:layout_column="1" android:text="@string/search_include_sub_directories" />
        </TableRow>
        <TableRow android:id="@id/search_field_size" android:visibility="gone">
            <TextView android:textStyle="bold" android:gravity="right" android:id="@id/search_cond_size_scope_selection_title_id" android:padding="3.0dip" android:text="@string/search_size_scope_selection_title" />
            <Spinner android:id="@id/search_size" android:prompt="@string/search_size_scope_selection_title" />
        </TableRow>
        <TableRow android:id="@id/search_field_date" android:visibility="gone">
            <TextView android:textStyle="bold" android:gravity="right" android:id="@id/search_cond_date_scope_selection_title_id" android:padding="3.0dip" android:text="@string/search_date_scope_selection_title" />
            <Spinner android:id="@id/search_date" android:prompt="@string/search_date_scope_selection_title" />
        </TableRow>
        <View android:layout_height="10.0dip" />
    </TableLayout>
</ScrollView>
