<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/archive_edit_panel" android:background="#ff000000" android:paddingTop="5.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ffffffff" android:id="@id/textView2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_password" />
        <EditText android:id="@id/etPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_rule_hint" android:password="true" style="@style/editInputText" />
        <CheckBox android:id="@id/cbxShowPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_show_password" />
        <CheckBox android:id="@id/cbxRemember" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_location_save" />
    </LinearLayout>
</LinearLayout>
